# compton-scattering-plane-angle-extractor

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  get_review.sh
.github/workflows/: ci.yaml
docs/: CODING_CONVENTIONS.md  COMMIT_CONVENTIONS.md  CONTRIBUTION.md  DOCUMENTATION_CONVENTIONS.md  README.md  SCRIPTING_CONVENTIONS.md  TESTING_CONVENTIONS.md
examples/: README.md  run_csv_file_analysis.sh  run_csv_file_analysis_extra_columns.sh  run_hdf5_file_analysis.sh  run_hdf5_file_analysis_extra_columns.sh
examples/data/: example_scattering.csv  example_scattering.h5  example_scattering_extra_columns.csv  example_scattering_extra_columns.h5
scripts/: extractor.sh  install.sh  run_tests.sh
src/compton_scattering_plane_angle_extractor/: __init__.py  __main__.py  cli.py  column_spec.py  config.py  logging_setup.py  pipeline.py  units.py
src/compton_scattering_plane_angle_extractor/geometry/: __init__.py  plane.py  scattering.py  vectors.py
src/compton_scattering_plane_angle_extractor/io/: __init__.py  formats.py  readers.py  writers.py
tests/: conftest.py
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_cli.py  test_column_spec.py  test_config.py  test_formats.py  test_logging_setup.py  test_package.py  test_pipeline.py  test_plane.py  test_readers.py  test_scattering.py  test_units.py  test_vectors.py  test_writers.py
