[project]
name = "compton-scattering-plane-angle-extractor"
version = "0.0.0"
description = "Program wyliczający kąty rozpraszania w dwóch płaszczyznach rozpraszania A i B oraz kąt pomiędzy tymi płaszczyznami."
requires-python = ">=3.12"
dependencies = ["numpy>=2","h5py>=3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compton-scattering-plane-angle-extractor"]