[project]
name = "compton-scattering-plane-angle-extractor"
version = "1.0.0"
description = "Program wyliczający kąty rozpraszania w dwóch płaszczyznach rozpraszania A i B oraz kąt pomiędzy tymi płaszczyznami."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Mateusz Jakub Bała" }]
dependencies = ["numpy>=2", "pandas>=2", "h5py>=3"]

[project.scripts]
compton-scattering-plane-angle-extractor = "compton_scattering_plane_angle_extractor.cli:main"
cspae = "compton_scattering_plane_angle_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compton_scattering_plane_angle_extractor"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
# Wersja analizy zgodna z wymaganiami stubów numpy/pandas (PEP 695 `type`).
# Minimalny runtime to nadal 3.11 — pilnują tego `requires-python`,
# `tool.ruff.target-version = py311` oraz matryca testów CI (3.11-3.14).
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["numpy.*", "pandas.*", "h5py.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=compton_scattering_plane_angle_extractor --cov-report=term-missing"

[tool.coverage.report]
# Próg pokrycia (>= 80%) zostanie włączony, gdy moduły będą zaimplementowane.
# Na etapie szkieletu pakietu nie wymuszamy progu, aby walidacja przechodziła.
show_missing = true
